# icinga2

.github/workflows/: authors-file.yml  backbot.yml  container-image.yml  linux.yml  windows-package.yml  windows.yml
agent/windows-setup-agent/: Program.cs
doc/: 06-distributed-monitoring.md  21-development.md
icinga-app/: icinga.cpp
icinga-installer/: CMakeLists.txt  icinga-installer.cpp  icinga2.wixpatch.cmake
lib/base/: utility.cpp
